--- a/templates/connections.html
+++ b/templates/connections.html
@@ -11,29 +11,28 @@
     </ul>
 </div>
 <div class="card">
-    <h4>Wi-Fi</h4>
     {% if current %}
     <!-- <div> -->
-    {% set signal = netinfo_wifi.signal %}
+    {% set signal = netinfo_wifi_0.signal %}
+    <h4>Wi-Fi (wlan0)</h4>
     <span class="signal-icon">
         {% if signal >= 80 %}
-        <span class="mdi mdi-wifi-strength-4 wifi-signal-icon"></span> {{ netinfo_wifi.ssid }}
+        <span class="mdi mdi-wifi-strength-4 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
         {% elif signal >= 60 %}
-        <span class="mdi mdi-wifi-strength-3 wifi-signal-icon"></span> {{ netinfo_wifi.ssid }}
+        <span class="mdi mdi-wifi-strength-3 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
         {% elif signal >= 40 %}
-        <span class="mdi mdi-wifi-strength-2 wifi-signal-icon"></span> {{ netinfo_wifi.ssid }}
+        <span class="mdi mdi-wifi-strength-2 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
         {% elif signal >= 20 %}
-        <span class="mdi mdi-wifi-strength-1 wifi-signal-icon"></span> {{ netinfo_wifi.ssid }}
+        <span class="mdi mdi-wifi-strength-1 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
         {% else %}
-        <span class="mdi mdi-wifi-strength-outline wifi-signal-icon"></span> {{ netinfo_wifi.ssid }}
+        <span class="mdi mdi-wifi-strength-outline wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
         {% endif %}
     </span>
-    {% comment %} {{ netinfo_wifi.ssid }} {% endcomment %}
     <!-- </div> -->
     <ul class="netinfo">
-        <li><strong>IP:</strong> {{ netinfo_wifi.ip or 'N/A' }}</li>
-        <li><strong>Gateway:</strong> {{ netinfo_wifi.gateway or 'N/A' }}</li>
-        {% for dns_entry in netinfo_wifi.dns %}
+        <li><strong>IP:</strong> {{ netinfo_wifi_0.ip or 'N/A' }}</li>
+        <li><strong>Gateway:</strong> {{ netinfo_wifi_0.gateway or 'N/A' }}</li>
+        {% for dns_entry in netinfo_wifi_0.dns %}
         <li><strong>DNS:</strong> {{ dns_entry }}</li>
         {% endfor %}
     </ul>
@@ -42,6 +41,7 @@
         <button type="submit" class="btn disconnect-btn btn-danger">Disconnect</button>
     </form>
     {% else %}
+    <h4>Wi-Fi 0</h4>
     <div>Not connected.</div>
     {% endif %}
 </div>
