--- a/templates/available_networks.html
+++ b/templates/available_networks.html
@@ -1,4 +1,4 @@
-<h3>Available Networks<span class="mdi mdi-wifi-refresh text-success" id="refreshWiFiList"></span></h3>
+<h3>Available Networks<span class="mdi mdi-wifi-refresh text-success btn" id="refreshWiFiList"></span></h3>
 <div class="network-grid" id="networks-container">
   {% for net in networks %}
     <div class="card network-card">
