--- a/templates/connections.html
+++ b/templates/connections.html
@@ -1,47 +1,163 @@
 <!-- templates/partials/connections.html -->
-<h3>Connections</h3>
-<div class="card">
-    <h4>Ethernet</h4>
-    <ul class="netinfo">
-        <li><strong>IP:</strong> {{ netinfo_eth.ip or 'N/A' }}</li>
-        <li><strong>Gateway:</strong> {{ netinfo_eth.gateway or 'N/A' }}</li>
-        {% for dns_entry in netinfo_eth.dns %}
-        <li><strong>DNS:</strong> {{ dns_entry }}</li>
-        {% endfor %}
-    </ul>
-</div>
-<div class="card">
-    {% if current %}
-    <!-- <div> -->
-    {% set signal = netinfo_wifi_0.signal %}
-    <h4>Wi-Fi (wlan0)</h4>
-    <span class="signal-icon">
-        {% if signal >= 80 %}
-        <span class="mdi mdi-wifi-strength-4 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
-        {% elif signal >= 60 %}
-        <span class="mdi mdi-wifi-strength-3 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
-        {% elif signal >= 40 %}
-        <span class="mdi mdi-wifi-strength-2 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
-        {% elif signal >= 20 %}
-        <span class="mdi mdi-wifi-strength-1 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
-        {% else %}
-        <span class="mdi mdi-wifi-strength-outline wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
-        {% endif %}
-    </span>
-    <!-- </div> -->
-    <ul class="netinfo">
-        <li><strong>IP:</strong> {{ netinfo_wifi_0.ip or 'N/A' }}</li>
-        <li><strong>Gateway:</strong> {{ netinfo_wifi_0.gateway or 'N/A' }}</li>
-        {% for dns_entry in netinfo_wifi_0.dns %}
-        <li><strong>DNS:</strong> {{ dns_entry }}</li>
-        {% endfor %}
-    </ul>
-
-    <form method="post" action="/disconnect">
-        <button type="submit" class="btn disconnect-btn btn-danger">Disconnect</button>
-    </form>
-    {% else %}
-    <h4>Wi-Fi 0</h4>
-    <div>Not connected.</div>
-    {% endif %}
+<div class="row border-bottom mb-4 connection-row">
+  <h3>Connections</h3>
+  <div class="col-3">
+    <div class="card connection-cards">
+      <div class="card-header">Ethernet</div>
+      <div class="card-body">
+        <ul class="netinfo">
+          <li>
+            <strong>IP:</strong> {{ netinfo_eth.ip or 'N/A' }}
+          </li>
+          <li>
+            <strong>MAC:</strong> {{ netinfo_eth.mac or 'N/A' }}
+          </li>
+          <li>
+            <strong>Gateway:</strong> {{ netinfo_eth.gateway or 'N/A' }}
+          </li>
+          {% for dns_entry in netinfo_eth.dns %}
+            <li>
+              <strong>DNS:</strong> {{ dns_entry }}
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="card connection-cards">
+      {% if current %}
+        <div class="card-header connection-header">
+          <span>Wi-Fi (wlan0)</span>
+          <form method="post" action="/disconnect" class="btn-disconnect">
+            <button type="submit" class="btn disconnect-btn btn-danger">Disconnect</button>
+          </form>
+        </div>
+        <div class="card-body">
+          {% set signal = netinfo_wifi_0.signal %}
+          <span class="signal-icon">
+            {% if signal >= 80 %}
+              <span class="mdi mdi-wifi-strength-4 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
+            {% elif signal >= 60 %}
+              <span class="mdi mdi-wifi-strength-3 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
+            {% elif signal >= 40 %}
+              <span class="mdi mdi-wifi-strength-2 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
+            {% elif signal >= 20 %}
+              <span class="mdi mdi-wifi-strength-1 wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
+            {% else %}
+              <span class="mdi mdi-wifi-strength-outline wifi-signal-icon"></span> {{ netinfo_wifi_0.ssid }}
+            {% endif %}
+          </span>
+          <ul class="netinfo">
+            <li>
+              <strong>IP:</strong> {{ netinfo_wifi_0.ip or 'N/A' }}
+            </li>
+            <li>
+              <strong>MAC:</strong> {{ netinfo_wifi_0.mac or 'N/A' }}
+            </li>
+            <li>
+              <strong>Gateway:</strong> {{ netinfo_wifi_0.gateway or 'N/A' }}
+            </li>
+            {% for dns_entry in netinfo_wifi_0.dns %}
+              <li>
+                <strong>DNS:</strong> {{ dns_entry }}
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
+      {% else %}
+        <div class="card-header connection-header">Wi-Fi (wlan0)</div>
+        <div class="card-body">Not connected.</div>
+      {% endif %}
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="card connection-cards">
+      {% if current %}
+        <div class="card-header connection-header">
+          <span>Wi-Fi (wlan1)</span>
+          <form method="post" action="/disconnect" class="btn-disconnect">
+            <button type="submit" class="btn disconnect-btn btn-danger">Disconnect</button>
+          </form>
+        </div>
+        <div class="card-body">
+          {% set signal = netinfo_wifi_1.signal %}
+          <span class="signal-icon">
+            {% if signal >= 80 %}
+              <span class="mdi mdi-wifi-strength-4 wifi-signal-icon"></span> {{ netinfo_wifi_1.ssid }}
+            {% elif signal >= 60 %}
+              <span class="mdi mdi-wifi-strength-3 wifi-signal-icon"></span> {{ netinfo_wifi_1.ssid }}
+            {% elif signal >= 40 %}
+              <span class="mdi mdi-wifi-strength-2 wifi-signal-icon"></span> {{ netinfo_wifi_1.ssid }}
+            {% elif signal >= 20 %}
+              <span class="mdi mdi-wifi-strength-1 wifi-signal-icon"></span> {{ netinfo_wifi_1.ssid }}
+            {% else %}
+              <span class="mdi mdi-wifi-strength-outline wifi-signal-icon"></span> {{ netinfo_wifi_1.ssid }}
+            {% endif %}
+          </span>
+          <ul class="netinfo">
+            <li>
+              <strong>IP:</strong> {{ netinfo_wifi_1.ip or 'N/A' }}
+            </li>
+            <li>
+              <strong>Gateway:</strong> {{ netinfo_wifi_1.gateway or 'N/A' }}
+            </li>
+            {% for dns_entry in netinfo_wifi_1.dns %}
+              <li>
+                <strong>DNS:</strong> {{ dns_entry }}
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
+      {% else %}
+        <div class="card-header connection-header">Wi-Fi (wlan1)</div>
+        <div class="card-body">Not connected.</div>
+      {% endif %}
+    </div>
+  </div>
+  {# <div class="col-3">
+    <div class="card connection-cards">
+      {% if current %}
+        <div class="card-header connection-header">
+          <span>Wi-Fi (wlan2)</span>
+          <form method="post" action="/disconnect" class="btn-disconnect">
+            <button type="submit" class="btn disconnect-btn btn-danger">Disconnect</button>
+          </form>
+        </div>
+        <div class="card-body">
+          {% set signal = netinfo_wifi_1.signal %}
+          <span class="signal-icon">
+            {% if signal >= 80 %}
+              <span class="mdi mdi-wifi-strength-4 wifi-signal-icon"></span> {{ netinfo_wifi_2.ssid }}
+            {% elif signal >= 60 %}
+              <span class="mdi mdi-wifi-strength-3 wifi-signal-icon"></span> {{ netinfo_wifi_2.ssid }}
+            {% elif signal >= 40 %}
+              <span class="mdi mdi-wifi-strength-2 wifi-signal-icon"></span> {{ netinfo_wifi_2.ssid }}
+            {% elif signal >= 20 %}
+              <span class="mdi mdi-wifi-strength-1 wifi-signal-icon"></span> {{ netinfo_wifi_2.ssid }}
+            {% else %}
+              <span class="mdi mdi-wifi-strength-outline wifi-signal-icon"></span> {{ netinfo_wifi_2.ssid }}
+            {% endif %}
+          </span>
+          <!-- </div> -->
+          <ul class="netinfo">
+            <li>
+              <strong>IP:</strong> {{ netinfo_wifi_2.ip or 'N/A' }}
+            </li>
+            <li>
+              <strong>Gateway:</strong> {{ netinfo_wifi_2.gateway or 'N/A' }}
+            </li>
+            {% for dns_entry in netinfo_wifi_2.dns %}
+              <li>
+                <strong>DNS:</strong> {{ dns_entry }}
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
+      {% else %}
+        <div class="card-header connection-header">Wi-Fi (wlan2)</div>
+        <div class="card-body">Not connected.</div>
+      {% endif %}
+    </div>
+  </div> #}
 </div>
